// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SHEETER HOT ## NATIVE ## 01 null 1`] = `
Array [
  "DEFFERED",
]
`;

exports[`SHEETER HOT ## NATIVE ## 02 empty 1`] = `
Array [
  "DEFFERED",
  "DEFFERED",
  "DEFFERED",
]
`;

exports[`SHEETER HOT ## NATIVE ## 03 just $hot 1`] = `
Array [
  Array [
    "color: green /*.[0]*/",
  ],
  "DEFFERED",
]
`;

exports[`SHEETER HOT ## NATIVE ## 04: color: 'red' 1`] = `
Object {
  "color": Object {
    "tracePath": "/$hot",
    "value": "red",
  },
}
`;

exports[`SHEETER HOT ## NATIVE ## 05: nested 1`] = `
Object {
  "color": Object {
    "tracePath": "/$hot/$hot",
    "value": "red",
  },
}
`;

exports[`SHEETER HOT ## NATIVE ## 06: nested 1`] = `
Object {
  "color": Object {
    "tracePath": "/$hot[1]/$hot",
    "value": "red",
  },
  "margin": Object {
    "tracePath": "/$hot[0]",
    "value": 0,
  },
}
`;

exports[`SHEETER HOT ## NATIVE ## 07: use attr 01: red 1`] = `
Object {
  "color": Object {
    "tracePath": "/$hot",
    "value": "red",
  },
}
`;

exports[`SHEETER HOT ## NATIVE ## 07: use attr 02: green 1`] = `
Object {
  "color": Object {
    "tracePath": "/$hot",
    "value": "green",
  },
}
`;

exports[`SHEETER HOT ## NATIVE ## 07: use attr 03: with $if 1`] = `
Object {
  "color": Object {
    "tracePath": "/$if/$hot",
    "value": "blue",
  },
}
`;

exports[`SHEETER HOT ## WEB ## 01 null 1`] = `
Array [
  "DEFFERED",
]
`;

exports[`SHEETER HOT ## WEB ## 02 empty 1`] = `
Array [
  "DEFFERED",
  "DEFFERED",
  "DEFFERED",
]
`;

exports[`SHEETER HOT ## WEB ## 03 just $hot 1`] = `
Array [
  Array [
    ".a { color:green /*.[0]*/ }",
  ],
  "DEFFERED",
]
`;

exports[`SHEETER HOT ## WEB ## 04: color: 'red' 1`] = `
Array [
  ".a { color:red /*/$hot*/ }",
]
`;

exports[`SHEETER HOT ## WEB ## 05: nested 1`] = `
Array [
  ".a { color:red /*/$hot/$hot*/ }",
]
`;

exports[`SHEETER HOT ## WEB ## 06: nested 1`] = `
Array [
  ".b { color:red /*/$hot[1]/$hot*/ }",
  ".a { margin:0 /*/$hot[0]*/ }",
]
`;

exports[`SHEETER HOT ## WEB ## 07: use attr 01: red 1`] = `
Array [
  ".a { color:red /*/$hot*/ }",
]
`;

exports[`SHEETER HOT ## WEB ## 07: use attr 02: green 1`] = `
Array [
  ".a { color:green /*/$hot*/ }",
]
`;

exports[`SHEETER HOT ## WEB ## 07: use attr 03: with $if 1`] = `
Array [
  ".a { color:blue /*/$if/$hot*/ }",
]
`;
